2014-10-15  Sylvain Chouleur  <sylvain.chouleur@gmail.com>

	* gnus-icalendar.el: Support vcal format timezones
	(gnus-icalendar-event--decode-datefield): use icalendar functions to
	compute dates with associated timezone
	(gnus-icalendar-event-from-ical): compute all timezones

2014-10-14  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-start.el (gnus-save-newsrc-file-check-timestamp): New option to
	check the newsrc.eld file's timestamp before saving it.
	(gnus-save-newsrc-file): Use it, with a prompt when the newsrc.eld
	timestamp has changed to be newer.

2014-10-06  Jan Tatarik  <jan.tatarik@gmail.com>

	* gnus-icalendar.el (gnus-icalendar-identities):
	Include message-alternative-emails.

2014-10-04  Alan Schmitt  <alan.schmitt@polytechnique.org>  (tiny change)

	* nnimap.el (nnimap-process-expiry-targets): Reverse the list of
	expired messages only when it was built in reverse order.

2014-10-04  Peter Münster  <pmlists@free.fr>  (tiny change)

	* gnus-delay.el (gnus-delay-send-queue): Remove `gnus-delay-header'
	last so it can be used in `message-send-hook'.

2014-10-02  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-29  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cloud.el (gnus-cloud-parse-version-1): Fix misspelling
	of ":delete".

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts):
	Revert last change that breaks links other than cid contents.

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative.

2014-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Make the working buffer